# Euler

./: .gitignore  README.md  flake.nix  stuff.nix
.github/workflows/: main.yml
c/: Makefile  README.md  flake.nix
c/libs/: prime.c  prime.h  structs.c  structs.h
c/p001/: Makefile  p001.c
c/p002/: Makefile  p002.c
c/p003/: Makefile  p003.c
c/p004/: Makefile  p004.c
c/p005/: Makefile  p005.c
c/p006/: Makefile  p006.c
c/p007/: Makefile  p007.c
c/p008/: Makefile  p008.c
c/p009/: Makefile  p009.c
c/p010/: Makefile  p010  p010.c
haskell/: README.md  cabal.project  flake.nix
haskell/lib/: lib.cabal
haskell/lib/Eulerlibs/: Prime.hs
haskell/p001/: Main.hs  p001.cabal
haskell/p002/: Main.hs  p002.cabal
haskell/p003/: Main.hs  p003.cabal
haskell/p004/: Main.hs  p004.cabal
haskell/p005/: Main.hs  p005.cabal
haskell/p006/: Main.hs  p006.cabal
haskell/p007/: Main.hs  p007.cabal
haskell/p008/: Main.hs  p008.cabal
haskell/p009/: Main.hs  p009.cabal
haskell/p010/: Main.hs  p010.cabal
rust/: Cargo.toml  README.md  flake.nix
rust/lib/: Cargo.toml
rust/lib/src/: lib.rs  prime.rs
rust/p001/: Cargo.toml
rust/p001/src/: main.rs
rust/p002/: Cargo.toml
rust/p002/src/: main.rs
rust/p003/: Cargo.toml
rust/p003/src/: main.rs
rust/p004/: Cargo.toml
rust/p004/src/: main.rs
rust/p005/: Cargo.toml
rust/p005/src/: main.rs
rust/p006/: Cargo.toml
rust/p006/src/: main.rs
rust/p007/: Cargo.toml
rust/p007/src/: main.rs
rust/p008/: Cargo.toml
rust/p008/src/: main.rs
rust/p009/: Cargo.toml
rust/p010/: Cargo.toml
(+2 files in other folders)
