cabal-version:      2.4
name:               eulerlibs
version:            0.1.0.0

author:             natto1784
maintainer:         singh.amneesh1784@gmail.com

library
    exposed-modules:  Eulerlibs.Prime
    build-depends:    base ^>=4.14.1.0
                    , containers
    hs-source-dirs:   .
    default-language: Haskell2010
